# ufo_repository

./: .gitignore  README.md
deeplearning/: balance_dataset.py  parse_coords.py
docker/: docker-compose.yml
flask_app/: Dockerfile
flask_app/src/: app.py  requirements.txt
infra/: cloudformation.yaml
k8s/: ingress.yaml  kustomization.yaml  modelrunner.yaml  namespace.yaml  ufobackend.yaml  ufodb.yaml  ufomap.yaml
k8s/scripts/: import-ufo-data.sh
machinelearning/: balance_dataset.py  chapter7.py  parse_coords.py  random_forest_ufo_classifier.py  run_random_forest.py
machinelearning/random_forest/: balance_dataset.py  random_forest_ufo_classifier.py
model_runner/: Dockerfile
mongo/: Dockerfile  import-data.sh  init-mongo.js
run_model_rest/src/: app.py
rust/: Cargo.toml
rust/ufo_geocoder/: Cargo.toml
rust/ufo_geocoder/src/: main.rs
rust/ufo_scraper/: Cargo.toml
rust/ufo_sighting_formatter/: Cargo.toml
scripts/: setupmongoindex.sh
sighting_data/: i_want_to_believe.sightings_with_failed_coord_query.json
ufo_backend/: Dockerfile  go.mod  go.sum  main.go
ufo_backend/controllers/: machineLearningController.go  machine_learning_controller.go  sightingController.go  sighting_controller.go
ufo_backend/scripts/: build-image.sh
ufo_backend/services/: machine_learning_service.go  sighting_service.go
ufo_backend/structs/: sighting.go  structs.go
ufo_backend/ufo_backend/: go.mod
ufo_frontend/ufo-map/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts  vue.config.js
ufo_scraper/: Cargo.toml
(+30 files in other folders)
