[package]
name = "ufo_geocoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json"]}
scraper = "0.17.1"
table-extract = "0.2.3"
mongodb = "2.1"
tokio = "1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
chronoutil = "0.2.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1" # Used in the Map Data into Structs section
async-std = "1"
rand = "0.8.5"